scss/legacy/stylesheet.scss
/* =================================== */


:root {
    /* Page header */
    --pageHeaderHeight: 0px;
    --pageHeaderPaddingTop: 64px;
    --pageHeaderPaddingBottom: 48px;
    --pageHeaderMargin: 0px;
    --pageHeaderRadius: 0;
    --pageHeaderBackground: var(--colorBackgroundSecondary);
    --pageHeaderInk: var(--colorInkPrimary);
    --pageHeaderDescriptionInk: var(--colorInkSecondary);
    --pageHeaderBorderColor: var(--colorBorderStructure);
    --pageHeaderGap: 20px;
}

/*  Legacy stylesheet – slowly breaking it down to smaller chunks
/* =================================== */

body,
html {
    height: 100%;
}

html {
    scroll-padding-top: calc(var(--topNavHeight) + 20px + var(--tabOffset, 0px));
}

body {
    scroll-behavior: smooth;
}

form {
    padding: 0;
    margin: 0;
    display: inline;
}

img {
    vertical-align: inherit;
    image-rendering: auto;
    -ms-interpolation-mode: nearest-neighbor;  /* IE (non-standard property) */
}


/* =================================== */


/*  5. Elements
/* =================================== */

/*=== 5.6 Popup Img ===*/

.popup-img img {
    -webkit-transition: var(--transitionDefault);
    transition: var(--transitionDefault);
}

.popup-img:hover img {
    opacity: 0.8;
    cursor: -webkit-zoom-in;
    cursor: -moz-zoom-in;
    cursor: zoom-in;
}


/* =================================== */


/*  Extras
/* =================================== */


/* Bootstrap Specific */

.bg-primary,
.badge-primary {
    background-color: var(--colorAccent) !important;
}

.bg-secondary {
    background-color: var(--colorBackgroundSecondary) !important;
}

.text-primary,
.btn-outline-light:hover,
.btn-link,
.btn-outline-light:not(:disabled):not(.disabled).active,
.btn-outline-light:not(:disabled):not(.disabled):active {
    color: var(--colorAccent) !important;
}

.btn-link:hover {
    color: var(--colorAccent) !important;
}

a.bg-primary:focus,
a.bg-primary:hover,
button.bg-primary:focus,
button.bg-primary:hover {
    background-color: var(--ctaButtonBackground) !important;
}

.progress-bar,
.nav-pills .nav-link.active,
.nav-pills .show>.nav-link,
.dropdown-item.active,
.dropdown-item:active {
    background-color: var(--colorAccent);
}

.page-item.active .page-link,
.custom-radio .custom-control-input:checked~.custom-control-label:before,
.custom-control-input:checked~.custom-control-label::before,
.custom-checkbox .custom-control-input:checked~.custom-control-label:before,
.custom-control-input:checked~.custom-control-label:before {
    background-color: var(--colorAccent);
    border-color: var(--colorAccent);
}

.list-group-item.active {
    background-color: var(--colorAccent);
    border-color: var(--colorAccent);
}

.page-link {
    color: var(--colorAccent);
    transition: var(--transitionDefault);
}

.page-link:hover {
    color: var(--colorAccentAlt);
}


/* Pagination */

.page-link {
    border: none;
    border-radius: var(--borderRadiusDefault);
    margin: 0 0.22rem;
    font-size: 16px;
    font-size: 1rem;
}

.page-link:hover {
    background-color: #e9eff0;
}


/* Vertical Multilple input group */

.vertical-input-group .input-group:first-child {
    padding-bottom: 0;
}

.vertical-input-group .input-group:first-child * {
    border-bottom-left-radius: 0;
    border-bottom-right-radius: 0;
}

.vertical-input-group .input-group:last-child {
    padding-top: 0;
}

.vertical-input-group .input-group:last-child * {
    border-top-left-radius: 0;
    border-top-right-radius: 0;
}

.vertical-input-group .input-group:not(:last-child):not(:first-child) {
    padding-top: 0;
    padding-bottom: 0;
}

.vertical-input-group .input-group:not(:last-child):not(:first-child) * {
    border-radius: 0;
}

.vertical-input-group .input-group:not(:first-child) * {
    border-top: 0;
}


/* =================================== */


/*  8. Blocks
/* =================================== */

code {
    padding: 0;
}

.block-children {
    margin-left: 16px;
}

ul>.block-children,
ol>.block-children {
    margin-left: 4px;
}

.heading {
    position: relative;
}

.heading a.copy-anchor {
    display: inline-flex;
    opacity: 0;
    transform: translateX(4px);
    position: absolute;
    left: -28px;
    top: -2px;
    transition: opacity 0.2s ease-in-out 0s, transform 0.2s ease-in-out 0s;
    width: 28px;
    text-align: center;
}

.heading a.copy-anchor svg {
    width: 20px;
    height: 20px;
    flex-shrink: 0;
}

.heading:hover a.copy-anchor,
.heading:focus-within a.copy-anchor {
    opacity: 1;
    transition-duration: 0.1s;
    transform: none;
}

.logo img {
    max-width: 120px;
    max-height: 30px;
}

.navbar-nav li {
    height: 44px;
}

#page-tab-content {
    padding-top: var(--contentBlockGap);
    max-width: var(--contentMaxWidth);

    &.centered {
        margin-left: auto;
        margin-right: auto;
    }
}


.container-title-overlay {
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    background: var(--colorNeutral900);
    opacity: 0.4;
    z-index: 0;
}

.container-title {
    background-color: var(--pageHeaderBackground);
    margin: var(--pageHeaderMargin);
    margin-bottom: 0;
    border-radius: var(--pageHeaderRadius);
    border-bottom: 1px solid var(--pageHeaderBorderColor);
    color: var(--pageHeaderInk);
    position: relative;
    padding: 0px var(--contentContainerPadding);

    &.style-boxed {
        --pageHeaderMargin: 20px;
        --pageHeaderRadius: 12px;
        --pageHeaderBorderColor: transparent;
    }
}
/* ... */

